--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -58,9 +58,56 @@ header nav{
 main{
     width: 100%;
     display: flex;
+    /* flex-direction: column; */
     flex-wrap: wrap;
     justify-content: center;
     background-color: var(--color-background-secundary);
+}
+
+.title-app{
+    width: 100%;
+    color: black;
+    font-size: 5rem;
+    text-align: center;
+    font-family: monospace
+}
+
+.container-config{
+    width: max-content;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    /* border: solid 2px var(--color-border); */
+    padding: 2rem;
+    justify-content: center;
+}
+
+.container-config h2{
+    color: black;
+    font-size: 2.5rem;
+    text-align: center;
+}
+
+.container-config input{
+    height: 2.5rem;
+}
+::placeholder{
+    text-align: center;
+}
+
+.container-config div{
+    display: flex;
+    /* flex-direction: column; */
+    justify-content: space-between;
+}
+
+.container-config select{
+    width: 50%;
+}
+
+.container-config label{
+    color: black;
+    font-size: 2rem;
 }
 
 .pokedesk{
@@ -138,11 +185,20 @@ main{
     color: black;
 }
 
-#img-pokemon{
+.container-img{
     width: 65%;
     height: 65%;
+    padding: 5%;
     margin: 0 auto;
     border-radius: 150% 100%;
+}
+
+#img-pokemon{
+    width: 100%;
+    height: 100%;
+    /* padding: 10%; */
+    margin: 0 auto;
+    /* border-radius: 150% 100%; */
 }
 
 .container-stats{
