--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -36,21 +36,38 @@ header{
     font-size: 1.5rem;
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     align-items: center;
 }
 
 .header-logo{
-    width: max-content;
+    width: 30%;
+    min-width: max-content;
     display: inline-flex;
     font-family: var(--font);
+    /* margin: 0 auto; */
 }
 
-.header-logo i{
+.title-app{
+    width: 30%;
+    min-width: max-content;
+    margin: 0 auto;
+    color: white;
+    font-size: 5rem;
+    text-align: center;
+    font-family: monospace
+}
+
+.header-logo i,
+.header-logo img{
+    width: 4rem;
+    height: 4rem;
     font-size: 4rem;
     margin-right: 1rem;
 }
 
 header nav{
+    width: 30%;
     font-size: 3rem;
     cursor: pointer;
 }
@@ -64,21 +81,13 @@ main{
     background-color: var(--color-background-secundary);
 }
 
-.title-app{
-    width: 100%;
-    color: black;
-    font-size: 5rem;
-    text-align: center;
-    font-family: monospace
-}
-
 .container-config{
-    width: max-content;
+    width: 300px;
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    /* border: solid 2px var(--color-border); */
     padding: 2rem;
+    margin: 0 auto;
     justify-content: center;
 }
 
@@ -88,8 +97,9 @@ main{
     text-align: center;
 }
 
-.container-config input{
+input{
     height: 2.5rem;
+    text-align: center;
 }
 ::placeholder{
     text-align: center;
@@ -179,7 +189,8 @@ main{
 
 .container-pokemon h1{
     width: 100%;
-    font-size: 2.5rem;
+    height: 30px;
+    font-size: 2.25rem;
     text-align: center;
     margin: 0 auto;
     color: black;
@@ -203,6 +214,7 @@ main{
 
 .container-stats{
     width: 100%;
+    height: 100px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -211,6 +223,7 @@ main{
 
 .container-stats div{
     width: 40%;
+    height: 25%;
     display: flex;
     flex-direction: column;
     margin: 0.5rem auto;
@@ -254,7 +267,37 @@ main{
     cursor: pointer;
 }
 
+.toPlay{
+    width: 30rem;
+    padding: 2rem;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 1rem;
+}
+
+.toPlay h2{
+    color: black;
+    font-size: 2.5rem;
+    text-align: center;
+}
+
+.toPlay div{
+    width: 100%;
+    display: inline-flex;
+    justify-content: space-around;
+}
+
+.toPlay button{
+    width: max-content;
+    height: 3rem;
+    padding: 5px;
+    font-size: 1.5rem;
+}
+
 #ver-mapa{
+    display: none;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -332,7 +375,6 @@ main{
     display: inline-block;
     justify-content: center;
     padding: 1rem;
-
 }
 
 .footer-container{
@@ -342,9 +384,10 @@ main{
     gap: 1.5rem;
 }
 
-.footer-logo{
-    /* width: 5rem; */
-    /* height: 5rem; */
+.footer-logo,
+.footer img{
+    width: 2.5rem;
+    height: 2.5rem;
     font-size: 3rem;
     text-align: center;
     text-decoration: none;
